# PostProcessing_MultipleCaseFiles

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_app.bat
docs/: API_CONTRACT.md
scripts/: smoke_test_qt.py
src/simpost/: __init__.py  app.py
src/simpost/backend/: __init__.py  api_contract.py  controller.py  export.py  ingestion.py  label_formula.py
src/simpost/ui/: main_window.py  plot_models.py
src/simpost/ui/widgets/: batch_export_dialog.py  controls_panel.py  plot_panel.py
tests/: test_ingestion.py
