[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simulation-post-processor"
version = "0.1.0"
description = "Native desktop scaffold for simulation post-processing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyQt6==6.11.0",
    "PyQt6-Qt6==6.11.1",
    "PyQt6-sip==13.11.1",
    "matplotlib==3.10.9",
    "numpy==2.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
simpost = "simpost.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
